<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/todos_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="24dp"
            android:text="@string/todos_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/todos_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todos_title_label"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/todos_subtitle"
            android:textSize="18sp" />


        <Button
            android:id="@+id/todos_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/todos_body_text"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:textSize="17sp"
            android:includeFontPadding="true"
            android:text="@string/button_reload" />

        <ProgressBar
            android:id="@+id/todos_progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/todos_body_text"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:visibility="invisible" />


            <TextView
                android:id="@+id/todos_userID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todos_action_button"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/user_id"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/todos_ID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todos_userID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/todos__task_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todos_ID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/todos_completed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/todos__task_title_label"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/completed"
                android:textSize="17sp" />

        </RelativeLayout>

</android.support.v7.widget.CardView>