<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/comments_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/comments"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/comments_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_title_label"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/comments_body"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/comments_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_body_text"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_n"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/comments_edit_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_input_label"
            android:layout_marginStart="13dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/comments_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/comments_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/comments_edit_text"
            android:background="@drawable/button_states"
            android:src="@drawable/cancel_button" />

        <TextView
            android:id="@+id/comments_error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/comments_bondary_error"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/comments_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments_error_label"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:includeFontPadding="true"
            android:text="@string/confirm"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/comments_expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/comments_error_label"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:background="@android:color/transparent"
            android:src="@drawable/expand_button"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/comments_progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/comments_error_label"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/comments_result_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comments_action_button"
            android:visibility="gone">

            <TextView
                android:id="@+id/comments_postID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/post_id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comments_ID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_postID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comments_name_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_ID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comments_email_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_name_title_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/comments_body_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comments_email_title_label"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/body"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>