<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/posts_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/posts_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/posts_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posts_title_label"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/posts_body"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/posts_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posts_body_text"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_n"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/posts_edit_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posts_input_label"
            android:layout_marginStart="13dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/posts_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/posts_edit_text"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/posts_edit_text"
            android:background="@drawable/button_states"
            android:src="@drawable/cancel_button" />



        <TextView
            android:id="@+id/posts_error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posts_edit_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/posts_bondary_error"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/posts_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/posts_error_label"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:includeFontPadding="true"/>

        <ImageButton
            android:id="@+id/posts_expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/posts_error_label"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:background="@android:color/transparent"
            android:src="@drawable/expand_button"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/posts_progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/posts_error_label"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/posts_result_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/posts_action_button"
            android:visibility="gone">

            <TextView
                android:id="@+id/posts_userID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/user_id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/posts_ID_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/posts_userID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/id"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/posts_post_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/posts_ID_label"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/posts_body_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/posts_post_title_label"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/body"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>