<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:layout_margin="24dp"
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_pin_black_48dp"/>

    <TextView
        android:layout_marginTop="44dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image1"
        android:text="@string/my_name"
        android:textSize="24sp"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/image1"/>



    <ImageView
        android:layout_margin="24dp"
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_work_black_48dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@id/image2"
        android:layout_alignTop="@id/image2"
        android:text="@string/my_career_objective"
        android:textSize="24sp"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/image2"/>



    <ImageView
        android:layout_margin="24dp"
        android:id="@+id/image3"
        android:layout_width="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone_black_48dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image3"
        android:layout_alignTop="@id/image3"
        android:layout_marginTop="20dp"
        android:text="@string/my_phone_number"
        android:textSize="24sp"/>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/image3"/>



    <ImageView
        android:layout_margin="24dp"
        android:id="@+id/image4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email_black_48dp"
        android:layout_below="@+id/line3"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image4"
        android:layout_alignTop="@id/image4"
        android:layout_marginTop="20dp"
        android:text="@string/my_email"
        android:textSize="23sp"/>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/image4"/>


    <ImageView
        android:layout_margin="24dp"
        android:id="@+id/image5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line4"
        android:src="@drawable/skype_icon2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image5"
        android:layout_alignTop="@id/image5"
        android:layout_marginTop="20dp"
        android:text="@string/my_skype"
        android:textSize="24sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/image5"/>










</RelativeLayout>